k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-vault-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vault.local.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8000
